--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,267 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+/* ----------------------------------------------
+ Estilo para el contenido y títulos
+ ---------------------------------------------- */
+ ion-content {
+  --background: var(--fondo-oscuro);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+h1, h2, h3, h4, p {
+  color: var(--color-letras-iconos);
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+/* ----------------------------------------------
+ Estilo para los titulos del segmento
+ ---------------------------------------------- */
+.titulos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 25px;
 }
 
-#container a {
-  text-decoration: none;
+/* ----------------------------------------------
+ Estilo para los botones del segmento
+ ---------------------------------------------- */
+.botones ion-segment-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.botones ion-segment-button div {
+  display: flex;
+  align-items: center;
+  column-gap: 10px; 
+}
+
+.botones p {
+  font-size: 15px;
+}
+
+/* ----------------------------------------------
+ Tamaño predeterminado para iconos
+ ---------------------------------------------- */
+ion-icon {
+  font-size: 3rem;
+  color: var(--color-letras-iconos);
+}
+
+/* ----------------------------------------------
+ Tamaño específico para el icono de "Delivery"
+ ---------------------------------------------- */
+.delivery {
+  font-size: 2rem;
+  color: var(--color-letras-iconos);
+}
+
+/* ----------------------------------------------
+ Estilo para el contenedor del contenido principal
+ ---------------------------------------------- */
+.contenido-sugerencias {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px; /* Espaciado interno */
+  background-color: var(--fondo-oscuro);
+}
+
+/* ----------------------------------------------
+ Estilo para la barra de búsqueda
+ ---------------------------------------------- */
+.barra-busqueda {
+  width: 100%;
+  padding: 20px;
+}
+
+ion-searchbar {
+  --border-radius: 93px 93px 93px 93px;
+}
+
+/* ----------------------------------------------
+ Estilo para el contenedor de sugerencias
+ ---------------------------------------------- */
+.sugerencias {
+  width: 100%;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 10px; 
+}
+
+.sugerencias-contenedor {
+  padding: 10px;
+  background-color: var(--fondo-terciario);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20%;
+}
+
+.sugerencias-icono {
+  font-size: 2.5rem;
+  color: var(--color-letras-iconos);
+}
+
+.sugerencias-icono-auto {
+  font-size: 4rem;
+  color: var(--color-letras-iconos);
+}
+
+
+/* ----------------------------------------------
+ Estilo para el scroll horizontal
+ ---------------------------------------------- */
+.scroll-horizontal {
+  display: flex;
+  overflow-x: auto;
+  gap: 5px; 
+}
+
+.scroll-horizontal::-webkit-scrollbar {
+  display: none; 
+}
+
+.elemento {
+  min-width: 150px; 
+}
+
+/* ----------------------------------------------
+ Ajusta el tamaño de las imágenes dentro de las cards
+ ---------------------------------------------- */
+ ion-card img {
+  width: 100%; /* Ocupa el 100% del contenedor */
+  max-width: 300px; /* Limita el tamaño máximo */
+  min-width: 150px; /* Limita el tamaño mínimo */
+  height: 200px; /* Establece una altura fija para uniformidad */
+  object-fit: cover; /* Asegura que la imagen cubra el espacio sin deformarse */
+  border-radius: 5px; /* Esquinas redondeadas para un mejor diseño */
+  overflow: hidden; /* Oculta cualquier exceso de la imagen */
+  display: block; /* Asegura que la imagen se muestre como un bloque */
+  background-color: transparent; /* Asegura que no haya fondo blanco */
+  transition: transform 0.3s ease; /* Transición suave para el zoom */
+}
+
+ion-card img:hover {
+  transform: scale(1.1); /* Aplica el zoom al pasar el cursor */
+}
+.precio {
+  font-size: 1.2rem; /* Ajusta el tamaño de fuente como desees */
+  /* Puedes agregar más estilos específicos si lo necesitas */
+}
+
+/* ----------------------------------------------
+ Ajusta el tamaño de las imágenes de vehículos
+ ---------------------------------------------- */
+.sugerencias-contenedor img {
+  width: 80px; /* Ancho fijo para uniformidad */
+  height: 80px; /* Altura fija para uniformidad */
+  object-fit: cover; /* Asegura que la imagen se recorte correctamente */
+  border-radius: 10%; /* Esquinas redondeadas para un mejor diseño */
+}
+
+/* ----------------------------------------------
+ Estilo para las tarjetas de Uber Eats
+ ---------------------------------------------- */
+.eats-elemento {
+  min-width: 100px; 
+}
+
+.uber-eats-categorias {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  padding-bottom: 0;
+}
+
+.barra-busqueda-eats {
+  width: 100%;
+  max-width: 600px; 
+  margin-top: 20px;
+  background-color: var(--fondo-secundario);
+  color: var(--color-letras-iconos);
+}
+
+.uber-eats-etiquetas {
+  padding: 0 0 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tarjeta-eats {
+  min-width: 340px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: var(--fondo-terciario);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  padding: 10px;
+}
+
+.contenido {
+  flex: 2;
+  padding-right: 20px;
+  position: relative;
+}
+
+h2 {
+  font-size: 1.5rem;
+  color: var(--color-letras-iconos);
+  margin-bottom: 15px;
+}
+
+button {
+  background-color: var(--fondo-secundario);
+  border: 2px solid var(--color-letras-iconos);
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 1rem;
+  color: var(--color-letras-iconos);
+}
+
+button:hover {
+  background-color: var(--color-letras-iconos);
+}
+
+.contenedor-imagen img {
+  border-radius: 100%;
+  width: 120px;
+  height: 100%;
+  object-fit: cover;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.uber-eats-descuentos {
+  padding-top: 10px;
+  margin: 10px;
+  color: var(--color-letras-iconos);
+}
+
+.uber-eats-tiendas {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.icono-tienda {
+  font-size: 4rem;
+  color: var(--color-letras-iconos);
+}
+
+ion-card-title {
+  color: #DEDEDE;
+}
+
+ion-card-subtitle {
+  color: #DEDEDE;
+}
+
+ion-card-header {
+  background-color: #161616;
 }
